--- a/src/Components/Country/country.css
+++ b/src/Components/Country/country.css
@@ -1,16 +1,23 @@
 .container {
-  display: flex;
-  flex-wrap: wrap;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
   justify-content:space-between ;
   align-items: center  ;
-  gap: 1rem;
-  padding: 1rem;
+  gap: 5px;
+  padding: 5px;
 }
 .country {
   border: 2px dotted rgb(255, 19, 19);
-  margin: 1rem;
-  padding: 1rem;
-  border-radius: 15px;
+  margin: 5px;
+  padding: 5px;
+  border-radius: 15px 0 15px 0;
   background-color: rgb(255, 230, 230);
   color: black;
+}
+.text-start {
+  text-align: start;
+}
+.img-width{
+  width: 150px;
+  height: 75px;
 }
