--- a/src/Components/Country/country.css
+++ b/src/Components/Country/country.css
@@ -1,8 +1,8 @@
 .container {
   /* display: flex; */
   /* flex-wrap: wrap; */
-  justify-content:space-between ;
-  align-items: center  ;
+  justify-content: space-between;
+  align-items: center;
   gap: 5px;
   padding: 5px;
 }
@@ -17,7 +17,14 @@
 .text-start {
   text-align: start;
 }
-.img-width{
+.img-width {
   width: 150px;
   height: 75px;
+}
+
+.visited {
+  background-color: rgb(0, 255, 0);
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
 }
